<resources>
    <string name="app_name">냉장고를 부탁해</string>
    <string name="space1">냉장</string>
    <string name="space2">냉동</string>
    <string name="space3">상온</string>
    <string name="txt_title_meat">고기</string>
    <string name="txt_title_vegetable">채소</string>
    <string name="txt_title_etc">기타</string>
    <string name="space_prompt">음식 종류</string>
    <string-array name="space">
        <item>고기</item>
        <item>채소</item>
        <item>기타</item>
    </string-array>
    <string name="txt_input">추가</string>
    <string name="txt_home">홈</string>
    <string name="main_1">냉장고 열기</string>
    <string name="main_2">유통기한 목록\n(레시피 검색)</string>
    <string name="main_3">장바구니 목록</string>

</resources>
