<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- img_meat list -->
        <TextView
            android:id="@+id/Meat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/txt_title_meat"
            android:fontFamily="@font/mainfont"
            android:textColor="@color/meat"
            android:textSize="25sp" />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/list_meat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/main_items"
                />
        </HorizontalScrollView>

        <!-- img_vegetable list -->
        <TextView
            android:id="@+id/Vegetable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_vegetable"
            android:fontFamily="@font/mainfont"
            android:textColor="@color/vege"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="25sp" />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/list_vegetable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/main_items"
                />
        </HorizontalScrollView>

        <!-- img_etc list -->
        <TextView
            android:id="@+id/etc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title_etc"
            android:fontFamily="@font/mainfont"
            android:textColor="@color/etc"
            android:textSize="25sp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp" />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/list_etc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/main_items"
                />
        </HorizontalScrollView>
    </LinearLayout>
</FrameLayout>