<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center">
                <CheckBox
                    android:text="@string/space1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/space1"
                    android:layout_gravity="top"
                    android:onClick="onClick"/>

                <CheckBox
                    android:text="@string/space2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/space2"
                    android:layout_marginStart="50dp"
                    android:onClick="onClick"/>

                <CheckBox
                    android:text="@string/space3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/space3"
                    android:layout_marginStart="50dp"
                    android:onClick="onClick"/>

            </LinearLayout>


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/type"
                android:entries="@array/space"
                android:prompt="@string/space_prompt"
                android:layout_marginTop="20dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="start">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="이름"
                            android:id="@+id/text_name"
                            android:layout_gravity="center"
                            android:layout_marginTop="13dp"
                            android:textSize="16sp"/>
                        <TextView
                            android:text="유통기한"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_life"
                            android:layout_gravity="center"
                            android:layout_marginTop="23dp"
                            android:textSize="16sp"/>
                        <TextView
                            android:text="수량"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView4"
                            android:layout_gravity="center"
                            android:layout_marginTop="23dp"
                            android:textSize="16sp"/>
                        <TextView
                            android:text="메모"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_memo"
                            android:layout_gravity="center"
                            android:layout_marginTop="23dp"
                            android:textSize="16sp"/>
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="22dp"
                    android:layout_gravity="end"
                    android:layout_marginStart="40dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/name"
                            android:text="Name"
                            android:textSize="16sp"
                            android:textAlignment="center"
                            android:layout_marginStart="50dp"/>

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="date"
                            android:hint="년/월/일"
                            android:ems="10"
                            android:id="@+id/editdate"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="15dp"/>

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:ems="10"
                            android:text="1"
                            android:id="@+id/editamount"
                            android:layout_marginStart="50dp"/>

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:ems="10"
                            android:id="@+id/editmemo"
                            android:layout_marginStart="50dp"/>

                    </LinearLayout>
                </FrameLayout>
            </FrameLayout>
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/returnhome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:onClick="btnhome"
                android:src="@drawable/return_main" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnupdate"
                android:src="@drawable/success" />

        </LinearLayout>

    </FrameLayout>
</FrameLayout>

    <!--    <?xml version="1.0" encoding="utf-8"?>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/FrameLayout_recipe"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:choiceMode="multipleChoice"
        />



    </FrameLayout>-->